@@ -53,6 +53,10 @@ body {
     caption {
         display: none;
     }
+    .caption {
+        font-family: #fonts[system]; font-weight: normal; margin: 0;
+        text-transform: uppercase; white-space: nowrap;
+    }
     table {
         border-collapse: collapse; display: block; margin: 0.25rem 0 0.5rem;
         position: relative; width: 100%;
@@ -77,7 +81,7 @@ body {
         td img.icon {
             height: 20px; width: 20px; vertical-align: middle;
         }
-        td.boolean, td.checkbox {
+        td.boolean, td.checkbox, td:has(img.icon) {
             text-align: center;
         }
         td.number {
@@ -470,6 +474,9 @@ body {
     }
     td.boolean {
         text-align: left;
+    }
+    .caption {
+        margin-left: 0.5rem;
     }
     .credit-control {
         justify-content: flex-start;
